--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,4 +12,4 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Build
-        run: cp -rf .github/workflows/Dockerfile . && docker build -t hyperf .
+        run: cp -rf ../../Dockerfile . && docker build -t hyperf .
