--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,4 +13,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build
-        run:  docker build -t hyperf .
+        run:  docker build -t hyperf ../
