unit tests step

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,3 +17,6 @@ jobs:
 
       - name: Run container
         run:  docker run --name hyperf -d -p 9501:9501 -it --privileged -u root --entrypoint /bin/sh hyperf
+
+      - name: Run tests
+        run: docker exec -it hyperf composer test
