--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,8 +15,8 @@ jobs:
       - name: Build
         run:  docker build -t hyperf .
 
-      - name: Run container
-        run:  docker run --name hyperf hyperf
+      - name: Start container and run tests
+        run:  docker run -d --name hyperf hyperf
 
       - name: Run tests
         run: docker exec -it hyperf composer test
