--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,4 +19,4 @@ jobs:
         run:  docker run -d --name hyperf hyperf
 
       - name: Run tests
-        run: docker exec -it hyperf composer test
+        run: docker exec hyperf composer test
