--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Build
         run:  docker build -t hyperf .
 
-      - name: Start container and run tests
+      - name: Start container
         run:  docker run -d --name hyperf hyperf
 
       - name: Run tests
