--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -18,7 +18,7 @@ jobs:
         run: docker build -t lauroappelt/eventosfull .  
       
       - name: Publish image to docker hub
-        run: docker push lauroappelt/eventosfull:$GITHUB_REF
+        run: docker push lauroappelt/eventosfull:${{GITHUB_REF}}
 
   deploy:
     needs: build
