--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -15,7 +15,7 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}       
       
       - name: Build docker image
-        run: docker build -t lauroappelt/eventosfull .  
+        run: docker build -t lauroappelt/eventosfull:${{ github.event.release.tag_name }} .  
       
       - name: Start container
         run:  docker run -d --name eventosfull lauroappelt/eventosfull
