--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -15,10 +15,10 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}       
       
       - name: Build docker image
-        run: docker build -t lauroappelt/eventosfull .  
+        run: docker build -t lauroappelt/eventosfull:${{ github.event.release.tag_name }} .  
       
       - name: Start container
-        run:  docker run -d --name eventosfull lauroappelt/eventosfull
+        run:  docker run -d --name eventosfull lauroappelt/eventosfull:${{ github.event.release.tag_name }}
 
       - name: Run tests
         run: docker exec eventosfull composer test
@@ -31,7 +31,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Pull image from docker hub
-        run: docker pull lauroappelt/eventosfull:latest
+        run: docker pull lauroappelt/eventosfull:${{ github.event.release.tag_name }}
       
       - name: Delete old container
         run: docker rm -f eventosfull-prod 
