--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -2,7 +2,7 @@ name: Deploy Application
 
 on:
   release:
-    types: [published]
+    types: [released, 'published']
 
 jobs:
   build:
@@ -10,6 +10,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        ref: '${{ github.event.release.tag_name }}'
       
       - name: Login to docker hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}       
