--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -2,7 +2,7 @@ name: Deploy Application
 
 on:
   release:
-    types: [released, 'published']
+    types: ['released', 'published']
 
 jobs:
   build:
