--- a/.github/workflows/deploy-homolog.yaml
+++ b/.github/workflows/deploy-homolog.yaml
@@ -37,4 +37,4 @@ jobs:
         run: docker rm -f eventosfull-prod 
       
       - name: Run docker container
-        run: docker run -d --name eventosfull-hom -p 9501:9501lauroappelt/eventosfull:hom
+        run: docker run -d --name eventosfull-hom -p 9501:9501 lauroappelt/eventosfull:hom
