--- a/.github/workflows/deploy-homolog.yaml
+++ b/.github/workflows/deploy-homolog.yaml
@@ -3,12 +3,11 @@ name: Deploy Application
 on:
   pull_request_target:
     types:
-      - merged
-    branches:
-      - 'main'
+      - closed
 
 jobs:
-  build:
+  if_merged:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
