--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,12 +2,13 @@ name: Continuos Integration
 
 on:
   pull_request:
-    braches:
+    branches:
       ['master']
 
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
+    environment: prod
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -20,3 +21,6 @@ jobs:
 
       - name: Run tests
         run: docker exec hyperf composer test
+
+      - name: Teste
+        run: echo ${{ env.VAR2 }}
