--- a/.github/workflows/deploy-homolog.yaml
+++ b/.github/workflows/deploy-homolog.yaml
@@ -40,4 +40,4 @@ jobs:
         run: docker rm -f eventosfull-hom 
       
       - name: Run docker container
-        run: docker run -d --name eventosfull-hom -p 9502:9501 lauroappelt/eventosfull:hom
+        run: docker run -d --name eventosfull-hom --network eventosfull-net -p 9502:9501 lauroappelt/eventosfull:hom
