--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -31,6 +31,7 @@ jobs:
   deploy:
     needs: build
     runs-on: self-hosted
+    environment: prod
     steps:
       - name: Pull image from docker hub
         run: docker pull lauroappelt/eventosfull:${{ github.event.release.tag_name }}
