--- a/.github/workflows/deploy-homolog.yaml
+++ b/.github/workflows/deploy-homolog.yaml
@@ -32,7 +32,7 @@ jobs:
     if: github.event.pull_request.merged == true
     needs: build
     runs-on: self-hosted
-    environment: qa
+    environment: hom
     steps:
       - name: Pull image from docker hub
         run: docker pull lauroappelt/eventosfull:hom
