--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,7 @@
             "rm -rf runtime/container"
         ],
         "test": "co-phpunit --prepend test/bootstrap.php",
+        "cs-check": "php-cs-fixer fix --dry-run $1",
         "cs-fix": "php-cs-fixer fix $1",
         "analyse": "phpstan analyse --memory-limit 300M",
         "start": [
