--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,15 +23,16 @@ jobs:
 
   cs-check:
     runs-on: ubuntu-latest
+    needs: unit-tests
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      # - name: Checkout code
+      #   uses: actions/checkout@v3
 
-      - name: Build
-        run:  docker build -t hyperf .
+      # - name: Build
+      #   run:  docker build -t hyperf .
 
-      - name: Start container
-        run:  docker run -d --name hyperf hyperf
+      # - name: Start container
+      #   run:  docker run -d --name hyperf hyperf
 
       - name: Run tests
         run: docker exec hyperf composer cs-check
