--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,33 +6,49 @@ on:
       ['main']
 
 jobs:
-  unit-tests:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Login to docker hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build
-        run:  docker build -t hyperf .
+        run:  docker build -t lauroappelt/eventosfull:${{ env.sha_short }} .
+
+      - name: Publish image to docker hub
+        run: docker push lauroappelt/eventosfull:${{ env.sha_short }}
+
+  unit-tests:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Login to docker hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Start container
-        run:  docker run -d --name hyperf hyperf
+        run:  docker run -d --name hyperf lauroappelt/eventosfull:${{ env.sha_short }}
 
       - name: Run tests
         run: docker exec hyperf composer test
 
   cs-check:
     runs-on: ubuntu-latest
-    needs: unit-tests
+    needs: [unit-tests, build]
     steps:
-      # - name: Checkout code
-      #   uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      # - name: Build
-      #   run:  docker build -t hyperf .
+      - name: Login to docker hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
-      # - name: Start container
-      #   run:  docker run -d --name hyperf hyperf
+      - name: Start container
+        run:  docker run -d --name hyperf lauroappelt/eventosfull:${{ env.sha_short }}
 
       - name: Run tests
         run: docker exec hyperf composer cs-check
