--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,10 +16,10 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build
-        run:  docker build -t lauroappelt/eventosfull:${{ env.sha_short }} .
+        run:  docker build -t lauroappelt/eventosfull:${{ github.event.pull_request.head.sha }} .
 
       - name: Publish image to docker hub
-        run: docker push lauroappelt/eventosfull:${{ env.sha_short }}
+        run: docker push lauroappelt/eventosfull:${{ github.event.pull_request.head.sha }}
 
   unit-tests:
     needs: build
@@ -32,7 +32,7 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Start container
-        run:  docker run -d --name hyperf lauroappelt/eventosfull:${{ env.sha_short }}
+        run:  docker run -d --name hyperf lauroappelt/eventosfull:${{ github.event.pull_request.head.sha }}
 
       - name: Run tests
         run: docker exec hyperf composer test
@@ -48,7 +48,7 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Start container
-        run:  docker run -d --name hyperf lauroappelt/eventosfull:${{ env.sha_short }}
+        run:  docker run -d --name hyperf lauroappelt/eventosfull:${{ github.event.pull_request.head.sha }}
 
       - name: Run tests
         run: docker exec hyperf composer cs-check
