--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,3 +52,19 @@ jobs:
 
       - name: Run tests
         run: docker exec hyperf composer cs-check
+
+  SAST:
+    runs-on: ubuntu-latest
+    needs: [unit-tests, build, cs-check]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Login to docker hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Start container
+        run:  docker run -d --name hyperf lauroappelt/eventosfull:${{ github.event.pull_request.head.sha }}
+
+      - name: Run tests
+        run: docker exec hyperf composer analyse
