--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,7 +39,7 @@ jobs:
 
   cs-check:
     runs-on: ubuntu-latest
-    needs: [unit-tests, build]
+    needs: [build]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -55,7 +55,7 @@ jobs:
 
   SAST:
     runs-on: ubuntu-latest
-    needs: [unit-tests, build, cs-check]
+    needs: [build]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
